[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/prefab/hiscore.tscn" type="PackedScene" id=2]
[ext_resource path="res://recursos/invasoresespaciais.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font/PrStart.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/sprites/slide_grab_texture.png" type="Texture" id=5]
[ext_resource path="res://Assets/sprites/slide_texture.png" type="Texture" id=6]
[ext_resource path="res://Assets/samples/ShipHit.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/samples/ObservingTheStar.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/buttons/flatDark05.png" type="Texture" id=9]
[ext_resource path="res://Assets/buttons/shadedDark05.png" type="Texture" id=10]
[ext_resource path="res://Assets/buttons/shadedDark06.png" type="Texture" id=11]
[ext_resource path="res://Assets/buttons/flatDark04.png" type="Texture" id=12]
[ext_resource path="res://Assets/buttons/shadedDark49.png" type="Texture" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 16, 16 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 2.7903
margin_right = 2.7903
margin_top = 0.643916

[sub_resource type="CircleShape2D" id=11]
radius = 45.0

[sub_resource type="CircleShape2D" id=12]
radius = 45.0

[sub_resource type="CircleShape2D" id=13]
radius = 45.0

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 35.0
margin_top = 243.0
margin_right = 143.0
margin_bottom = 265.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 0.156863, 0.87451, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.156863, 0.0980392, 0.811765, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opt" type="Button" parent="."]
margin_left = 30.0
margin_top = 267.0
margin_right = 142.0
margin_bottom = 289.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 0.156863, 0.87451, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.156863, 0.0980392, 0.811765, 1 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hiscore" parent="." instance=ExtResource( 2 )]
margin_top = 132.0
margin_bottom = 243.0

[node name="title" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="options" type="Node2D" parent="."]
position = Vector2( -180, 0 )

[node name="title" type="Label" parent="options"]
margin_left = 30.0
margin_top = 7.0
margin_right = 142.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 7 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx" type="Label" parent="options"]
margin_left = 30.0
margin_top = 28.0
margin_right = 142.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 8 )
text = "EFFECTS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="Button" parent="options"]
margin_left = 43.0
margin_top = 262.0
margin_right = 133.0
margin_bottom = 284.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 0.156863, 0.87451, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.156863, 0.0980392, 0.811765, 1 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume_control" type="HScrollBar" parent="options"]
margin_left = 4.0
margin_top = 41.0
margin_right = 172.0
margin_bottom = 57.0
custom_styles/grabber_highlight = SubResource( 9 )
custom_styles/grabber = SubResource( 9 )
custom_styles/scroll = SubResource( 10 )
min_value = -60.0
max_value = 0.0
step = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Label" parent="options"]
margin_left = 30.0
margin_top = 68.0
margin_right = 142.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 8 )
text = "MUSIC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_control" type="HScrollBar" parent="options"]
margin_left = 4.0
margin_top = 81.0
margin_right = 172.0
margin_bottom = 97.0
custom_styles/grabber_highlight = SubResource( 9 )
custom_styles/grabber = SubResource( 9 )
custom_styles/scroll = SubResource( 10 )
min_value = -60.0
max_value = 0.0
step = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sample_text" type="AudioStreamPlayer" parent="options"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Tween_camera" type="Tween" parent="."]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "MUSIC"

[node name="controls" type="Node2D" parent="."]
visible = false
z_index = 100

[node name="right" type="TouchScreenButton" parent="controls"]
position = Vector2( 56, 265 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 11 )
pressed = ExtResource( 9 )
shape = SubResource( 11 )
passby_press = true
action = "ui_right"
visibility_mode = 1

[node name="left" type="TouchScreenButton" parent="controls"]
position = Vector2( 11, 265 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 10 )
pressed = ExtResource( 12 )
shape = SubResource( 12 )
passby_press = true
action = "ui_left"
visibility_mode = 1

[node name="fire" type="TouchScreenButton" parent="controls"]
position = Vector2( 132, 262 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 13 )
pressed = ExtResource( 11 )
shape = SubResource( 13 )
passby_press = true
action = "ui_shoot"
visibility_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="opt" to="." method="_on_opt_pressed"]
[connection signal="pressed" from="options/ok" to="." method="_on_ok_pressed"]
[connection signal="value_changed" from="options/volume_control" to="." method="_on_volume_control_value_changed"]
[connection signal="value_changed" from="options/music_control" to="." method="_on_music_control_value_changed"]
